--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -288,12 +288,12 @@ body{
     outline:none;
   }
   .slick-prev{
-    left:20%;
+    left:85%;
     bottom: -22px;
     z-index: 100;
     position: absolute;
     &:after{
-      content: '\f177';
+      content: '\f178';
       font-family: 'icomoon';;
       width: 32px;
       height: 32px;
@@ -303,10 +303,10 @@ body{
   }
   .slick-next{
     position: absolute;
-    right: 10%;
+    right: 75%;
     bottom: -22px;
     &:after{
-      content: '\f178';
+      content: '\f177';
       font-family: 'icomoon';
       width: 32px;
       height: 32px;
@@ -389,6 +389,14 @@ body{
     font-size: 28px;
     vertical-align: middle;
     padding-right: 15px;
+}
+
+.contacts__email{
+  text-decoration: none;
+  color: #4a4a4a;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 38px;
 }
 .contacts__email:before{
   content:'\f0e0';
